--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>{{title1}}</h1>
-<app-maindisplay></app-maindisplay>
-
+<h1>{{title}}</h1>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/main">Main</a>
+</nav>
+<router-outlet></router-outlet>
+<!--<app-maindisplay></app-maindisplay>-->
+<app-messages></app-messages>
