--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="grid grid-pad">
-  <a *ngFor="let function of functions" class="col-1-4"
-     routerLink="/detail/{{function.id}}">
+  <a *ngFor="let func of functions" class="col-1-4"
+     routerLink="/detail/{{func.id}}">
     <div class="module hero">
-      <h4>{{function.name}}</h4>
+      <h4>{{func.name}}</h4>
     </div>
   </a>
 </div>
